# SmartCrypt

./: CMakeLists.txt  README.md
core/: CMakeLists.txt
core/exe/: main.cxx
core/lib/: SmartCrypt.cxx  SmartCrypt.hpp
core/lib/Engine/: Engine.cxx  Engine.hpp  Header.cxx  Header.hpp  __opImpl.cxx
tests/: CMakeLists.txt
tests/lib/: EngineTests.cxx  HeaderTests.cxx
