add_executable(
  EngineTests
  ./lib/EngineTests.cxx
)
target_link_libraries(
  EngineTests
  GTest::gtest_main
  smartcrypt
)
gtest_discover_tests(EngineTests)

add_executable(
  HeaderTests
  ./lib/HeaderTests.cxx
)
target_link_libraries(
  HeaderTests
  GTest::gtest_main
  smartcrypt
)
gtest_discover_tests(HeaderTests)